Fix width being to wide when collapsing the mobile navbar

--- a/css/main.scss
+++ b/css/main.scss
@@ -237,7 +237,7 @@ h2 {
 @media (max-width: 768px) {
   #bs-example-navbar-collapse-1 {
     position: absolute;
-    width: 738px;
+    width: 95%;
   }
   .navbar {
     padding-bottom: 200px !important;
